[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets-MNR/Notalot35Regular-8DeD.ttf.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets-Residuos/Recicláveis/Óleo de cozinha.png" type="Texture" id=2]
[ext_resource path="res://Scripts/RecycablesResumepg2.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.482353 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.482353 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.482353 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.482353 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.615686 )

[sub_resource type="Theme" id=7]
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.482353 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.482353 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.482353 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.482353 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0.615686 )

[sub_resource type="Theme" id=14]
Button/styles/disabled = SubResource( 9 )
Button/styles/focus = SubResource( 10 )
Button/styles/hover = SubResource( 11 )
Button/styles/normal = SubResource( 12 )
Button/styles/pressed = SubResource( 13 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 1 )

[node name="RecycablesResumepg2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.878431, 0, 0.635294 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 56.0
color = Color( 0.0431373, 0.537255, 0, 1 )

[node name="ÓleoDeCozinha" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="ÓleoDeCozinha"]
margin_left = 32.0
margin_top = -24.0
margin_right = 440.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "O óleo de cozinha usado pode ser refinado para produzir biocombustíveis, como o biodiesel, que é usado para alimentar veículos. Além disso, pode ser utilizado na produção de sabão e outros produtos de limpeza. "
autowrap = true

[node name="BackButton" type="Button" parent="."]
margin_left = 312.0
margin_top = 240.0
margin_right = 354.0
margin_bottom = 260.0
theme = SubResource( 7 )
custom_colors/font_color_focus = Color( 0.541176, 0.878431, 0.309804, 1 )
custom_colors/font_color_hover = Color( 0.541176, 0.878431, 0.309804, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0.52549, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Back"

[node name="Button" type="Button" parent="."]
margin_left = 360.0
margin_top = 240.0
margin_right = 471.0
margin_bottom = 260.0
theme = SubResource( 14 )
custom_colors/font_color_focus = Color( 0.541176, 0.878431, 0.309804, 1 )
custom_colors/font_color_hover = Color( 0.541176, 0.878431, 0.309804, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0.52549, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "Return to Menu"

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
